@@ -442,6 +442,8 @@ CHANGES
       when using pool with threadlocal setting
 - mssql
     - added support for TIME columns (simulated using DATETIME) [ticket:679]
+    - added support for BIGINT, MONEY, SMALLMONEY, UNIQUEIDENTIFIER and 
+      SQL_VARIANT [ticket:721]
     - index names are now quoted when dropping from reflected tables
       [ticket:684]
 - postgres
